--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Prototype</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
@@ -13,17 +13,16 @@
     <div class="container-fluid">
 		<div class="row">
             <div class="logo">
-                <h3><a href="">FOCAL</a></h3>
+                <a href=""><img src="img/logo.png" width="180" class="logo"/></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.php" class="active"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
-                    <li><a href="gallery.php"><span class="glyphicon glyphicon-picture"></span> GALLERY</a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-user"></span> ABOUT ME</a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-paperclip"></span> SKILLS</a></li>
+                    <li><a href="index.html" class="active"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
+                    <li><a href="gallery.html"><span class="glyphicon glyphicon-picture"></span> GALLERY</a></li>
+                    <li><a href="about.html"><span class="glyphicon glyphicon-user"></span> ABOUT ME</a></li>
                     <li><a href=""><span class="glyphicon glyphicon-file"></span> RESUME</a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-list-alt"></span> PROJECTS</a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-envelope"></span> CONTACT ME</a></li>
+                    <li><a href="projects.html"><span class="glyphicon glyphicon-list-alt"></span> PROJECTS</a></li>
+                    <li><a href="contacts.html"><span class="glyphicon glyphicon-envelope"></span> CONTACT ME</a></li>
                 </ul>
             </nav>
         </div>
